--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "MAINTENANCE_MODE": true,
     "iconUnsend": {
         "status": true,
-        "icon": "🍓"
+        "icon": "😠"
     },
     "notiGroup": true,
     "NOTIFICATION": true,
@@ -13,12 +13,12 @@
     "commandDisabled": [],
     "eventDisabled": [],
     "autoClean": true,
-    "BOTNAME": " 𝙼𝚊𝚛𝚒𝚜 ",
-    "AMDIN_NAME": "Vtuan",
-    "FACEBOOK_ADMIN": "https://www.facebook.com/tddzs1tg06",
-    "PREFIX": "",
+    "BOTNAME": " 𝙽𝚒𝚗𝚘 ",
+    "AMDIN_NAME": "𝐕𝐚𝐧𝐧𝐂𝐡𝐢𝐞𝐧𝐧",
+    "FACEBOOK_ADMIN": "https://www.facebook.com/vanchiendzs",
+    "PREFIX": "!",
     "ADMINBOT": [
-        "",
+        "100048286966787",
         ""
     ],
     "NDH": [],
